--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   path: ^1.8.0
   flutter_image_compress: ^1.1.0
   http: ^0.13.4
+  curved_navigation_bar: ^1.0.6
+  provider: ^6.1.2
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
