--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: flutter_application
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -40,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.0.15
   permission_handler: ^10.2.0
+  url_launcher: ^6.0.20
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -71,6 +73,7 @@ flutter_icons:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
+    - assets/menu_img.png
     - assets/add2.png
     - assets/img.png
     - assets/img_1.png
